# BUAA_Graphics_Ray_Tracing

./: CMakeLists.txt  README.md  main.cpp  my_math.h  objects.h
